--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>♡</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>miles edgeworth</title>
 </head>
 <body>
+    <h1 style="color:#b9004d;">All about Miles edgeworth<3</h1>
+<img src="https://static.wikia.nocookie.net/e8e1baad-39ca-4a0a-94d9-8bf48baa7515/smart/width/236/height/236" alt="miles ganteng ehe">
+<h3 style="color:rgb(128, 5, 52);">"The guilty will always lie, to avoid being found out. There's no way to tell who is guilty and who is innocent!"</h3>
+<p>Miles Edgeworth is a[2] Chief Prosecutor of the prosecutor's office. During his first four years as a prosecutor, he had a perfect win record in trials and was willing to do just about anything to get a guilty verdict for the defendant. His defeat in court at the hand of his childhood friend Phoenix Wright was the beginning of a series of seismic shifts in his attitude concerning his profession. He even quit twice, only to return each time with a fresh outlook on how he conducted his life.
 
-<h1>All about Ace trappola</h1>
-<p>by mika</p>
-
-</body>
-</html>
+    By the time of the Mask☆DeMasque trials, he had become an international prosecutor who had prosecuted in five other countries, as well as being known as the top prosecutor in his homeland. His goal as a prosecutor is to seek the truth above all else, and to use the power of the law to save people.</p>
+<img src="https://i.pinimg.com/originals/44/be/a1/44bea1b8f058cde7cb8c7df1df08d348.gif" alt="gif suami ana">
+<h3 style="color:darkred;">Biological information</h3>
+<p> Reckoned birth year(s)? ;
+    1992-1993
+    Documented age range ;
+    9*- 35*
+    Last known status ;
+    Alive (Sep. 2028)
+    Eye color ;
+    Gray
+    Hair color ;
+    Dark gray
+    Height ;
+    5'10"; 178 cm</p>
+    <img src="https://i.pinimg.com/564x/5e/f2/b9/5ef2b9ca1ac9554a3211ed68aa982acc.jpg" alt="gambar miles edgewort ganteng">
+body>
+</html> 
