--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@
     Height ;
     5'10"; 178 cm</p>
     <img src="https://i.pinimg.com/564x/5e/f2/b9/5ef2b9ca1ac9554a3211ed68aa982acc.jpg" alt="gambar miles edgewort ganteng">
-body>
+<body>
 </html> 
